Correct and improve the readability of the code.

--- a/sass/components/breadcrumb.scss
+++ b/sass/components/breadcrumb.scss
@@ -4,7 +4,7 @@
     align-items: flex-start;
     font-size: 0.8em;
 
-    .lx-item {
+    &-item {
         display: flex;
         flex-wrap: nowrap;
 
