--- a/sass/components/card.scss
+++ b/sass/components/card.scss
@@ -1,61 +1,9 @@
 .lx-card {
-    padding: 0.8em 1em;
+    padding: 2em;
     border-radius: 0.328em;
     border: none;
     box-shadow: 0 0.125rem 0.125rem 0 rgba(0, 0, 0, 0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0, 0, 0, 0.12),
         0 0.0625rem 0.3125rem 0 rgba(0, 0, 0, 0.2);
-
-    .lx-card-content {
-        padding: 1.5em;
-
-        .lx-card-title {
-            margin: 0 0 0.5em 0;
-            font-size: 1.5rem;
-        }
-    }
-
-    .lx-card-action {
-        padding: 1rem 1.5rem;
-        border-radius: 0 0 0.125em 0.125em;
-        border-top: 0.0625rem solid rgba(160, 160, 160, 0.2);
-        background-color: inherit;
-
-        .lx-card-btn {
-            margin: 0 1.5em 0 0;
-            text-transform: uppercase;
-
-            &:last-child {
-                margin: 0;
-            }
-        }
-    }
-
-    &.image {
-        .lx-card-image {
-            width: 100%;
-            position: relative;
-
-            img {
-                max-width: 100%;
-                max-height: 100%;
-                object-fit: cover;
-            }
-
-            .lx-card-title {
-                max-width: 100%;
-                position: absolute;
-                left: 0;
-                bottom: 0;
-                padding: 1.5em;
-                color: $white;
-            }
-        }
-    }
-
-    &.panel {
-        padding: 1.5em;
-        border-radius: 0.125em;
-    }
 
     &.is-muted {
         user-select: none;
