--- a/sass/components/pagination.scss
+++ b/sass/components/pagination.scss
@@ -1,15 +1,14 @@
 .lx-pagination {
-    margin-left: -0.125em;
-    margin-right: -0.125em;
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
 
-    .lx-item {
-        margin: 0 0.125em;
+    &-item {
         padding: 0 0.5em;
-        line-height: 1.9;
         border-radius: 0.188em;
         border: 0.063em solid $black;
+        line-height: normal;
         font-size: 0.813em;
         color: $black;
         background-color: transparent;
