--- a/sass/form/input.scss
+++ b/sass/form/input.scss
@@ -3,11 +3,7 @@ input {
     width: 100%;
     margin: 0;
     padding: 0.3rem 0.6rem;
-    overflow: visible;
-    border-radius: 0;
-    border: 0;
-    border-bottom: 2px solid;
-    line-height: 1;
+    line-height: normal;
     font-family: inherit;
     font-size: inherit;
 }
