--- a/sass/form/label.scss
+++ b/sass/form/label.scss
@@ -1,5 +1,6 @@
 label {
     display: block;
+    font-family: inherit;
     font-size: inherit;
     font-weight: 700;
 
