--- a/sass/helpers/generic.scss
+++ b/sass/helpers/generic.scss
@@ -14,7 +14,7 @@
     padding: 0 !important;
 }
 
-.is {
+.is-float {
     &-left {
         float: left;
     }
